pop up modal adjustment

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,7 +12,7 @@
     scroll-behavior: smooth;
   }
   ::-webkit-scrollbar {
-    @apply w-2 h-1.5 bg-transparent;
+    @apply w-2 h-1.5 bg-transparent hidden lg:block;
   }
   ::-webkit-scrollbar-thumb {
     @apply rounded-xl bg-gray-400;
